--- a/src/Busybee/SecurityBundle/Resources/views/User/passwordAlreadyRequested.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/passwordAlreadyRequested.html.twig
@@ -4,7 +4,7 @@
 {% block title %}{{ parent() }}{{ 'security.request.password.already'|trans }}{% endblock title %}
 
 {% block titleBlock %}
-<div class="jumbotron">
+    <div class="jumbotron hideSection">
 	<h1>{{ 'security.request.title'|trans }}</h1>
 </div>
 {% endblock titleBlock %}
