--- a/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
@@ -64,7 +64,7 @@
 {% endblock menuBar %}
 
 {% block titleBlock %}
-<div class="jumbotron">
+    <div class="jumbotron hideSection">
 	<h1>Replace Me {{ _self.getTemplateName() }}</h1>
 </div>
 {% endblock titleBlock %}
