Install Store Email Settings
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SystemBundle/Resources/views/Emails/test.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Emails/test.html.twig
@@ -1,1 +1,3 @@
-<p>The email system on your server has been correctly configured.</p>
+{% trans_default_domain 'SystemBundle' %}
+
+<p>{{ 'mailer.test.success'|trans }}</p>
