--- a/src/Busybee/SystemBundle/Resources/views/Install/checkMailer.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Install/checkMailer.html.twig
@@ -1,6 +1,8 @@
 {# src/General/SecurityBundle/Resources/views/System/start.html.twig #}
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
+{% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
+
 {% block menuContainer %}
 {% endblock menuContainer %}
 
@@ -10,105 +12,52 @@
 {% block headerLead %}{{ 'system.install.description'|trans }}{% endblock headerLead %}
 
 {% block contentContainer %}
-    {% set route = 'onClick="window.open(\'' ~ path("install_misc_check")|raw ~ '\',\'_self\')"' %}
-    {% if config.mailer.mailer_transport is empty or config.mailer.canDeliver %}{% set proceedAdditional = route %}{% else %}{% set proceedAdditional = 'disabled' %}{% endif %}
-    {% set h3Content = proceedButton({'additional': proceedAdditional}) %}
-    {% set h3Content = h3Content ~ saveButton({'additional': 'id="_submit" name="_submit"'}) %}
-	<form action="{{ path("install_save_mailer") }}" method="post">
+    {{ form_start(form) }}
+    {% set h3Content = proceedButton({additional: 'id=proceedButton', windowOpen: {route: path("install_misc_check")}}) %}
+    {% set h3Content = h3Content ~ saveButton() %}
         {% include '@BusybeeHome/Page/panelStart.html.twig' with {'transDomain': 'SystemBundle', 'header': 'install.mailer.parameters'} %}
 		<div id="form_body" class="container-fluid">
 			<div class="row">
 				<div class="well col-sm-6">
-					<div class="form-group">
-						<select id="transport" name="transport" class="form-control">
-							<option value=''{% if config.mailer.mailer_transport == '' %} selected{% endif %}>{{ 'mailer.transport.off'| trans }}</option>
-							<option value='smtp'{% if config.mailer.mailer_transport == 'smtp' %} selected{% endif %}>{{ 'mailer.transport.smtp'| trans }}</option>
-							<option value='mail'{% if config.mailer.mailer_transport == 'mail' %} selected{% endif %}>{{ 'mailer.transport.mail'| trans }}</option>
-							<option value='sendmail'{% if config.mailer.mailer_transport == 'sendmail' %} selected{% endif %}>{{ 'mailer.transport.sendmail'| trans }}</option>
-							<option value='gmail'{% if config.mailer.mailer_transport == 'gmail' %} selected{% endif %}>{{ 'mailer.transport.gmail'| trans }}</option>
-						</select>
-						<label for="transport">{{ 'mailer.transport.title'|trans }}</label><br />
-						<span>{{ 'mailer.transport.description'|trans }}</span>
-						<input type="hidden" name="_csrf_token" value="{{ csrf_token('mailer') }}" />
-					</div>
+                    {{ form_row(form.transport, {value: config.mailer.mailer_transport}) }}
 				</div>
 			</div>
 			
 			<div class="row" id="smtpMailer">
 				<div class="well col-sm-3">
-					<div class="form-group">
-						<input type="text" id="host" name="host" value="{{ config.mailer.mailer_host }}" class="form-control" >
-						<label for="host">{{ 'mailer.host.title'|trans }}</label><br />
-						<span>{{ 'mailer.host.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.host, {value: config.mailer.mailer_host}) }}
 				</div>
 				<div class="well col-sm-3">
-					<div class="form-group">
-						<input type="number" id="port" name="port" value="{{ config.mailer.mailer_port }}" class="form-control" >
-						<label for="port">{{ 'mailer.port.title'|trans }}</label><br />
-						<span>{{ 'mailer.port.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.port, {value: config.mailer.mailer_port}) }}
 				</div>
 				<div class="well col-sm-3">
-					<div class="form-group">
-						<select id="encryption" name="encryption" value="{{ config.mailer.mailer_encryption }}" required class="form-control">
-							<option value=''>{{ 'mailer.encryption.none'| trans }}</option>
-							<option value='ssl'>{{ 'mailer.encryption.ssl'| trans }}</option>
-							<option value='tls'>{{ 'mailer.encryption.tls'| trans }}</option>
-						</select>
-						<label for="encryption">{{ 'mailer.encryption.title'|trans }}</label><br />
-						<span>{{ 'mailer.encryption.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.encryption, {value: config.mailer.mailer_encryption}) }}
 				</div>
 				<div class="well col-sm-3">
-					<div class="form-group">
-						<select id="auth_mode" name="auth_mode" value="{{ config.mailer.mailer_auth_mode }}" required class="form-control">
-							<option value='plain'>{{ 'mailer.auth_mode.plain'| trans }}</option>
-							<option value='login'>{{ 'mailer.auth_mode.login'| trans }}</option>
-							<option value='cram-md5'>{{ 'mailer.auth_mode.cram-md5'| trans }}</option>
-						</select>
-						<label for="auth_mode">{{ 'mailer.auth_mode.title'|trans }}</label><br />
-						<span>{{ 'mailer.auth_mode.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.auth_mode, {value: config.mailer.mailer_auth_mode}) }}
 				</div>
 			</div>
-			
-			<div class="row">
+
+			<div class="row mailerDetailsHide">
 				<div class="well col-sm-6">
-					<div class="form-group">
-						<input type="text" id="user" name="user" value="{{ config.mailer.mailer_user }}" required class="form-control" >
-						<label for="user">{{ 'mailer.user.title'|trans }}</label><br />
-						<span>{{ 'mailer.user.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.user, {value: config.mailer.mailer_user}) }}
 				</div>
 				<div class="well col-sm-6">
-					<div class="form-group">
-						<input type="text" id="password" name="password" value="{{ config.mailer.mailer_password }}" required class="form-control" >
-						<label for="password">{{ 'mailer.password.title'|trans }}</label><br />
-						<span>{{ 'mailer.password.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.password, {value: config.mailer.mailer_password}) }}
 				</div>
 			</div>
-			
-			<div class="row">
+
+			<div class="row mailerDetailsHide">
 				<div class="well col-sm-6">
-					<div class="form-group">
-						<input type="text" id="sender_name" name="sender_name" value="{{ config.mailer.mailer_sender_name }}" required class="form-control" >
-						<label for="sender_name">{{ 'mailer.sender_name.title'|trans }}</label><br />
-						<span>{{ 'mailer.sender_name.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.sender_name, {value: config.mailer.mailer_sender_name}) }}
 				</div>
 				<div class="well col-sm-6">
-					<div class="form-group">
-						<input type="text" id="sender_address" name="sender_address" value="{{ config.mailer.mailer_sender_address }}" required class="form-control" >
-						<label for="sender_address">{{ 'mailer.sender_address.title'|trans }}</label><br />
-						<span>{{ 'mailer.sender_address.description'|trans }}</span>
-					</div>
+                    {{ form_row(form.sender_address, {value: config.mailer.mailer_sender_address}) }}
 				</div>
 			</div>
 		</div>
         {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
-	</form>
+    {{ form_end(form) }}
 {% endblock contentContainer %}
 
 
@@ -116,56 +65,50 @@
 {% block javascripts %}
 	{{ parent() }}
 	<script type="text/javascript">
-		$(function() {
-			$('#smtpMailer').hide(); 
-			$('#host').prop('disabled', true);
-			$('#port').prop('disabled', true);
-			$('#encryption').prop('disabled', true);
-			$('#auth_mode').prop('disabled', true);
-			if($('#transport').val() == '') {
-				$('#user').prop('disabled', true);
-				$('#password').prop('disabled', true);
-				$('#sender_name').prop('disabled', true);
-				$('#sender_address').prop('disabled', true);
-			} else {
-				$('#user').prop('disabled', false);
-				$('#password').prop('disabled', false);
-				$('#sender_name').prop('disabled', false);
-				$('#sender_address').prop('disabled', false);
+        $(document).ready(function () {
+            if ($('#mailer_transport').val() == 'off') {
+                $('#smtpMailer').fadeOut(5);
+                $('.smtpMailer').prop('disabled', true);
+                $('.mailerDetailsHide').fadeOut(5);
+                $('.mailerDetails').prop('disabled', true);
+            } else if ($('#mailer_transport').val() == 'smtp') {
+                $('.smtpMailer').prop('disabled', false);
+                $('#smtpMailer').fadeIn(5);
+                $('.mailerDetailsHide').fadeIn(5);
+                $('.mailerDetails').prop('disabled', false);
+            } else {
+                $('#smtpMailer').fadeOut(5);
+                $('.smtpMailer').prop('disabled', true);
+                $('.mailerDetailsHide').fadeIn(5);
+                $('.mailerDetails').prop('disabled', false);
 			}
-			$('#transport').change(function(){
-				if($('#transport').val() == 'smtp') {
-					$('#smtpMailer').show(); 
-					$('#host').prop('disabled', false);
-					$('#port').prop('disabled', false);
-					$('#encryption').prop('disabled', false);
-					$('#auth_mode').prop('disabled', false);
-					$('#user').prop('disabled', false);
-					$('#password').prop('disabled', false);
-					$('#sender_name').prop('disabled', false);
-					$('#sender_address').prop('disabled', false);
-					$('#proceedButton').prop('disabled', true);
-				} else {
-					if($('#transport').val() == '') {
-						$('#proceedButton').prop('disabled', false);
-						$('#user').prop('disabled', true);
-						$('#password').prop('disabled', true);
-						$('#sender_name').prop('disabled', true);
-						$('#sender_address').prop('disabled', true);
-					} else {
-						$('#proceedButton').prop('disabled', true);
-						$('#user').prop('disabled', false);
-						$('#password').prop('disabled', false);
-						$('#sender_name').prop('disabled', false);
-						$('#sender_address').prop('disabled', false);
-					}
-					$('#host').prop('disabled', true);
-					$('#port').prop('disabled', true);
-					$('#encryption').prop('disabled', true);
-					$('#auth_mode').prop('disabled', true);
-					$('#smtpMailer').hide(); 
-				} 
-			});
-		});
+            {% if config.mailer.canDeliver %}
+            $('#proceedButton').prop('disabled', false);
+            {% else %}
+            $('#proceedButton').prop('disabled', true);
+            {% endif %}
+        });
+
+        $('#mailer_transport').change(function () {
+            if ($('#mailer_transport').val() == 'off') {
+                $('#proceedButton').prop('disabled', false);
+                $('.smtpMailer').prop('disabled', true);
+                $('#smtpMailer').fadeOut(5);
+                $('.mailerDetailsHide').fadeOut(5);
+                $('.mailerDetails').prop('disabled', true);
+            } else if ($('#mailer_transport').val() == 'smtp') {
+                $('#proceedButton').prop('disabled', true);
+                $('.smtpMailer').prop('disabled', false);
+                $('#smtpMailer').fadeIn(5);
+                $('.mailerDetailsHide').fadeIn(5);
+                $('.mailerDetails').prop('disabled', false);
+            } else {
+                $('#proceedButton').prop('disabled', true);
+                $('.smtpMailer').prop('disabled', true);
+                $('#smtpMailer').fadeOut(5);
+                $('.mailerDetailsHide').fadeIn(5);
+                $('.mailerDetails').prop('disabled', false);
+            }
+        });
 	</script>
 {% endblock javascripts %}
